--- a/gacha-gaming/src/App.css
+++ b/gacha-gaming/src/App.css
@@ -33,7 +33,10 @@ body{
   font-family: 'Piazzolla', serif;
   text-decoration: none;
   color: white;
-  margin-right: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+  font-size: 30px;
+  font-weight: bolder;
 }
 
 .titleButton:hover{
@@ -140,6 +143,18 @@ body{
   transition: .3s;
 }
 
+.blueButton{
+  background-color: black;
+  border: 3px solid rgb(92, 157, 242);
+  color: rgb(92, 157, 242);
+  transition: .3s;
+}
+
+.blueButton:hover {
+  animation: pulse 1s infinite;
+  transition: .3s;
+}
+
 @keyframes pulse {
   0% {
     transform:scale(1);
@@ -151,3 +166,105 @@ body{
     transform: scale(1);
   }
 }
+
+/* code taken form https://codepen.io/pgalor/pen/OeRWJQ and https://codepen.io/Moslim/pen/zwJPgL */
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+
+.rollGlitch{
+  animation: glitch 1s linear infinite;
+  color: white;
+  font-family: 'Fira Mono';
+  font-weight: bolder;
+  font-size: 30px;
+}
+
+@keyframes glitch{
+  2%,64%{
+    transform: translate(2px,0) skew(0deg);
+  }
+  4%,60%{
+    transform: translate(-2px,0) skew(0deg);
+  }
+  62%{
+    transform: translate(0,0) skew(5deg); 
+  }
+}
+
+.rollGlitch:before,
+.rollGlitch:after{
+  content: attr(title);
+  position: absolute;
+  left: 0;
+}
+
+.rollGlitch:before{
+  animation: glitchTop 1s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop{
+  2%,64%{
+    transform: translate(2px,-2px);
+  }
+  4%,60%{
+    transform: translate(-2px,2px);
+  }
+  62%{
+    transform: translate(13px,-1px) skew(-13deg); 
+  }
+}
+
+.rollGlitch:after{
+  animation: glitchBotom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom{
+  2%,64%{
+    transform: translate(-2px,0);
+  }
+  4%,60%{
+    transform: translate(-2px,0);
+  }
+  62%{
+    transform: translate(-22px,5px) skew(21deg); 
+  }
+}
+
+.victory {
+	font-family: "Montserrat";
+	text-align: center;
+	color: #FFF;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	letter-spacing: 1px;
+}
+
+.victoryText {
+	background-image: url(https://thumbs.gfycat.com/UnlinedHospitableAgama-size_restricted.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	text-transform: uppercase;
+	font-size: 120px;
+	line-height: .75;
+	margin: 10px 0;
+}
+/* end of code */
+
+.defeatDiv{
+  text-align: center;
+}
+
+.defeat{
+  color: #591b04;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 100px;
+}
+
