--- a/gacha-gaming/src/App.css
+++ b/gacha-gaming/src/App.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: black;
 }
 
@@ -6,31 +6,31 @@ body{
   text-align: center;
 }
 
-.titleVideo{
- position: absolute;
- width: 100%;
- left: 50%;
- top: 50%;
- height: 100%;
- object-fit: cover;
- transform: translate(-50%,-50%);
- z-index: -1;
+.titleVideo {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
-.titleMenu{
+.titleMenu {
   position: fixed;
-  bottom:0;
-  background: rgba(0, 0,0, 0.5);
-  color:#f1f1f1;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
   width: 100%;
   padding: 20;
 }
 
-.titleText{
-  font-family: 'Acme', sans-serif;
+.titleText {
+  font-family: "Acme", sans-serif;
 }
 
 .titleButton {
-  font-family: 'Piazzolla', serif;
+  font-family: "Piazzolla", serif;
   text-decoration: none;
   color: white;
   margin-right: 30px;
@@ -39,16 +39,16 @@ body{
   font-weight: bolder;
 }
 
-.titleButton:hover{
+.titleButton:hover {
   color: black;
 }
 
-.rollImage{
+.rollImage {
   height: 500px;
   width: auto;
 }
 
-.battle{
+.battle {
   background-image: url("https://static.wikia.nocookie.net/feheroes_gamepedia_en/images/8/89/BG_BraveBridge.png/revision/latest?cb=20170924202644&format=original");
   background-position: center center;
   background-size: contain;
@@ -67,22 +67,39 @@ body{
   width: auto;
 }
 
-.healthBar{
-  position: relative;
+.healthBar {
+  position: fixed;
   height: 20px;
   width: 350px;
   border-radius: 50px;
-  border: 1px solid black
+  border: 1px solid black;
 }
 
-.healthHero{
+.healthBarEnemy {
+  position: fixed;
+  height: 20px;
+  width: 350px;
+  border-radius: 50px;
+  border: 1px solid black;
+  right: 0;
+  top: 1;
+}
+
+.healthHero {
   background: #00ccc2;
   height: 100%;
   border-radius: inherit;
-  transition: width .2s ease-in;
+  transition: width 0.2s ease-in;
 }
 
-.button{
+.healthEnemy {
+  background: red;
+  height: 100%;
+  border-radius: inherit;
+  transition: width 0.2s ease-in;
+}
+
+.button {
   width: 170px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -95,185 +112,220 @@ body{
   display: inline-block;
 }
 
-.redButton{
+.redButton {
   background-color: black;
   border: 3px solid #f00909;
   color: #f00909;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .redButton:hover {
   animation: pulse 1s infinite;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.greenButton{
+.greenButton {
   background-color: black;
   border: 3px solid #18b155;
   color: #18b155;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .greenButton:hover {
   animation: pulse 1s infinite;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.whiteButton{
+.whiteButton {
   background-color: black;
   border: 3px solid #ffffff;
   color: #ffffff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .whiteButton:hover {
   animation: pulse 1s infinite;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.plainButton{
+.plainButton {
   background-color: white;
   border: 3px solid black;
   color: black;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .plainButton:hover {
   animation: pulse 1s infinite;
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.blueButton{
+.blueButton {
   background-color: black;
   border: 3px solid rgb(92, 157, 242);
   color: rgb(92, 157, 242);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .blueButton:hover {
   animation: pulse 1s infinite;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 @keyframes pulse {
   0% {
-    transform:scale(1);
+    transform: scale(1);
   }
   70% {
-    transform: scale(.9);
+    transform: scale(0.9);
   }
-  100%{
+  100% {
     transform: scale(1);
   }
 }
 
 /* code taken form https://codepen.io/pgalor/pen/OeRWJQ and https://codepen.io/Moslim/pen/zwJPgL */
-@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono:400");
 
-.rollGlitch{
+.rollGlitch {
   animation: glitch 1s linear infinite;
   color: white;
-  font-family: 'Fira Mono';
+  font-family: "Fira Mono";
   font-weight: bolder;
   font-size: 30px;
 }
 
-@keyframes glitch{
-  2%,64%{
-    transform: translate(2px,0) skew(0deg);
+@keyframes glitch {
+  2%,
+  64% {
+    transform: translate(2px, 0) skew(0deg);
   }
-  4%,60%{
-    transform: translate(-2px,0) skew(0deg);
+  4%,
+  60% {
+    transform: translate(-2px, 0) skew(0deg);
   }
-  62%{
-    transform: translate(0,0) skew(5deg); 
+  62% {
+    transform: translate(0, 0) skew(5deg);
   }
 }
 
 .rollGlitch:before,
-.rollGlitch:after{
+.rollGlitch:after {
   content: attr(title);
   position: absolute;
   left: 0;
 }
 
-.rollGlitch:before{
+.rollGlitch:before {
   animation: glitchTop 1s linear infinite;
   clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
 }
 
-@keyframes glitchTop{
-  2%,64%{
-    transform: translate(2px,-2px);
+@keyframes glitchTop {
+  2%,
+  64% {
+    transform: translate(2px, -2px);
   }
-  4%,60%{
-    transform: translate(-2px,2px);
+  4%,
+  60% {
+    transform: translate(-2px, 2px);
   }
-  62%{
-    transform: translate(13px,-1px) skew(-13deg); 
+  62% {
+    transform: translate(13px, -1px) skew(-13deg);
   }
 }
 
-.rollGlitch:after{
+.rollGlitch:after {
   animation: glitchBotom 1.5s linear infinite;
   clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
   -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
 }
 
-@keyframes glitchBotom{
-  2%,64%{
-    transform: translate(-2px,0);
+@keyframes glitchBotom {
+  2%,
+  64% {
+    transform: translate(-2px, 0);
   }
-  4%,60%{
-    transform: translate(-2px,0);
+  4%,
+  60% {
+    transform: translate(-2px, 0);
   }
-  62%{
-    transform: translate(-22px,5px) skew(21deg); 
+  62% {
+    transform: translate(-22px, 5px) skew(21deg);
   }
 }
 
 .victory {
-	font-family: "Montserrat";
-	text-align: center;
-	color: #FFF;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	letter-spacing: 1px;
+  font-family: "Montserrat";
+  text-align: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  letter-spacing: 1px;
 }
 
 .victoryText {
-	background-image: url(https://thumbs.gfycat.com/UnlinedHospitableAgama-size_restricted.gif);
-	background-size: cover;
-	color: transparent;
-	-moz-background-clip: text;
-	-webkit-background-clip: text;
-	text-transform: uppercase;
-	font-size: 120px;
-	line-height: .75;
-	margin: 10px 0;
+  background-image: url(https://thumbs.gfycat.com/UnlinedHospitableAgama-size_restricted.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 120px;
+  line-height: 0.75;
+  margin: 10px 0;
 }
 /* end of code */
 
-.defeatDiv{
+.defeatDiv {
   text-align: center;
 }
 
-.defeat{
+.defeat {
   color: #591b04;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 100px;
 }
 
+.leaderboard{
+  position: relative;
+  top: 50%;
+  left: 33%;
+  width: 285px;
+  height: 108px;
+  border-radius: 10px;
+}
 
-table,th,td{
-  font-size: 40px;
-  margin-right: auto;
-  margin-left: auto;
-  border: 1px solid purple;
+li{
+  list-style-type: none;
+  position: relative;
+  z-index: 1;
+  font-size: 14px;
   color: white;
-  margin-bottom: 20px;
+  font-size: 22px;
+}
+
+@media only all and (max-width: 540px) {
+  .battleHero, .battleEnemy{
+    max-width: 30vw;
+  }
+
+  .battleHero {
+    height: auto;
+    margin-right: 40px;
+  }
+
+  .battleEnemy {
+    height: auto;
+  }
+
+  .button {
+    width: 100px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
